# KGLEngine

./: .gitignore
CMakeModules/: CreateLauncher.cmake  GatherKGLTargetSources.cmake  ReadKGLTargetDependencies.cmake
Code/KGL_Engine/KGL_Base/include/KGL_Base/: ArrayView.h  EnumFlags.h  Marco.h  PointersVector.h  Ptr.h  Reference.h  UnusedVar.h
Code/KGL_Engine/KGL_Base/src/common/: Bitset.cpp  Stopwatch.cpp
Code/KGL_Engine/KGL_Core/include/KGL_Core/: Application.h  ApplicationListener.h  Common.h  CoreModule.h  CreateInstance.h  FwdDecl.h  GetUserName.h  IApplication.h  ICoreModule.h  IModule.h  IObject.h  ISystem.h  ITypeRegistry.h  (+10 more)
Code/Projects/TestProject/: main.cpp
KGL_Engine/: ConfigureKGL.cmake  GatherKGLModuleSources.cmake  GenerateDefaultKGLModule.cmake
KGL_Engine/KGL_Base/include/KGL_Base/: ArrayView.h  Ptr.h  Stopwatch.h
KGL_Engine/KGL_Core/: CMakeLists.txt
KGL_Engine/KGL_Core/include/KGL_Core/: Module.h  SystemsManager.h  TypeRegistry.h
KGL_Engine/KGL_Core/src/common/: CoreModule.cpp
KGL_Engine/KGL_Graphics/: CMakeLists.txt  ExternDeps.txt
KGL_Engine/KGL_Graphics/include/KGL_Graphics/: GraphicsModule.h
KGL_Engine/KGL_Graphics/src/common/: WindowManager.cpp  WindowManagerImpl.h
Projects/: GenerateKGLProject.cmake
Projects/TestProject/: CMakeLists.txt
Projects/TestProject/Data/Resources/Shaders/Fragment/: Simplest.res
Projects/TestProject/Data/Resources/Shaders/Vertex/: Simplest.res
Projects/TestProject/Data/Shaders/Fragment/: Simplest.glsl
Projects/TestProject/code/src/common/: main.cpp
Solutions/: GenerateTestBuildWindows.bat  GenerateTestBuildWindows_14.bat  GenerateTestBuildWindows_15.bat  GenerateTestBuildWindows_32.bat  GenerateTestBuildWindows_64.bat  GenerateTestBuild_MSVC.bat
(+125 files in other folders)
